--- a/src/app/components/home/shared/navbar/navbar.component.scss
+++ b/src/app/components/home/shared/navbar/navbar.component.scss
@@ -36,8 +36,54 @@
       border-radius: 4px 4px 0 0; /* Rounded top corners for active tab */
     }
   }
-}
 
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+
+    li {
+      float: left;
+      position: relative;
+
+      a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+
+        &:hover {
+          background-color: #111;
+        }
+      }
+
+      ul {
+        display: none;
+        position: absolute;
+        background-color: #333;
+        min-width: 160px;
+        z-index: 1;
+
+        li {
+          float: none;
+
+          a {
+            padding: 12px 16px;
+
+            &:hover {
+              background-color: #575757;
+            }
+          }
+        }
+      }
+
+      &:hover > ul {
+        display: block;
+      }
+    }
+  }
+}
 
 .navbar {
   display: flex;
@@ -79,6 +125,7 @@ button.active {
   font-weight: bold;
   color: #007bff;
 }
+
 .dropdown-menu button {
   color: #a51e36; /* Maroon text always visible */
   border-bottom: 3px solid transparent; /* Default transparent border */
