--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -60,6 +60,9 @@
               <mat-error *ngIf="passwordsDoNotMatch">
                 Passwords do not match.
               </mat-error>
+              <mat-error *ngIf="passwordsInvalid">              
+                Password should contain at least one upper case, one lower case and one number and the length between 8 to 14 characters.
+              </mat-error>
             </mat-form-field>
           </div>
         </div>
